--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -10,8 +10,8 @@ endif()
 add_definitions("-DLOGGING_IDENTIFIER=MARBLE_PLUGINS")
 
 if(NOT ANDROID)
-    add_subdirectory( designer )
-    add_subdirectory( templates )
+#    add_subdirectory( designer )
+#    add_subdirectory( templates )
 endif()
 
 add_subdirectory( render )
