--- a/src/plugins/render/overviewmap/CMakeLists.txt
+++ b/src/plugins/render/overviewmap/CMakeLists.txt
@@ -10,6 +10,6 @@ set( overviewmap_UI OverviewMapConfigWidget.ui )
 
 qt_wrap_ui(overviewmap_SRCS ${overviewmap_UI})
 
-set( OverviewMap_LIBS Qt6::Svg )
+set( OverviewMap_LIBS Qt6::Svg Qt6::SvgWidgets)
 
 marble_add_plugin( OverviewMap ${overviewmap_SRCS} )
