--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(NOT ANDROID)
 #    add_subdirectory( designer )
-#    add_subdirectory( templates )
+    add_subdirectory( templates )
 endif()
 
 add_subdirectory( render )
