--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 add_definitions("-DLOGGING_IDENTIFIER=MARBLE_PLUGINS")
 
 if(NOT ANDROID)
-#    add_subdirectory( designer )
+    add_subdirectory( designer )
     add_subdirectory( templates )
 endif()
 
