port all tools to Qt6

--- a/tools/svg2pnt/CMakeLists.txt
+++ b/tools/svg2pnt/CMakeLists.txt
@@ -9,4 +9,4 @@ include_directories(
 set( ${TARGET}_SRC svg2pnt.cpp svgxmlhandler.cpp )
 add_executable( ${TARGET} ${${TARGET}_SRC} )
 
-target_link_libraries( ${TARGET}  Qt6::Core Qt6::Xml )
+target_link_libraries( ${TARGET}  Qt6::Core Qt6::Xml Qt6::Core5Compat)
