--- a/tools/pntreplace/CMakeLists.txt
+++ b/tools/pntreplace/CMakeLists.txt
@@ -9,4 +9,4 @@ include_directories(
 set( ${TARGET}_SRC pntreplace.cpp svgxmlhandler.cpp )
 add_executable( ${TARGET} ${${TARGET}_SRC} )
 
-target_link_libraries( ${TARGET} Qt6::Xml Qt6::Widgets )
+target_link_libraries( ${TARGET} Qt6::Xml Qt6::Widgets Qt6::Core5Compat )
