--- a/src/plugins/runner/CMakeLists.txt
+++ b/src/plugins/runner/CMakeLists.txt
@@ -23,10 +23,10 @@ add_subdirectory( cyclestreets )
 
 #Parsing
 add_subdirectory( cache )
-#add_subdirectory( gpx )
-#add_subdirectory( json )
-#add_subdirectory( kml )
-#add_subdirectory( osm )
+add_subdirectory( gpx )
+add_subdirectory( json )
+add_subdirectory( kml )
+add_subdirectory( osm )
 add_subdirectory( pn2 )
 add_subdirectory( pnt )
 add_subdirectory( log )
@@ -37,5 +37,5 @@ marble_set_package_properties( libshp PROPERTIES DESCRIPTION "reading and writin
 marble_set_package_properties( libshp PROPERTIES URL "http://shapelib.maptools.org/" )
 marble_set_package_properties( libshp PROPERTIES TYPE OPTIONAL PURPOSE "reading and displaying .shp files" )
 if( LIBSHP_FOUND )
-  #add_subdirectory( shp )
+  add_subdirectory( shp )
 endif( LIBSHP_FOUND )
