--- a/src/plugins/runner/json/CMakeLists.txt
+++ b/src/plugins/runner/json/CMakeLists.txt
@@ -28,7 +28,7 @@ endif()
 # install(FILES marble_part_geojson.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
 
 # register thumbnail plugin as handler
-install(FILES marble_thumbnail_geojson.desktop DESTINATION ${KDE_INSTALL_FULL_KSERVICESDIR})
+install(FILES marble_thumbnail_geojson.desktop DESTINATION ${KDE_INSTALL_FULL_APPDIR})
 
 if(NOT WIN32 AND NOT APPLE)
     # register marble app as handler
