--- a/src/plugins/runner/gpx/CMakeLists.txt
+++ b/src/plugins/runner/gpx/CMakeLists.txt
@@ -67,7 +67,7 @@ endif()
 # install(FILES marble_part_gpx.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
 
 # register thumbnail plugin as handler
-install(FILES marble_thumbnail_gpx.desktop DESTINATION ${KDE_INSTALL_FULL_KSERVICESDIR})
+install(FILES marble_thumbnail_gpx.desktop DESTINATION ${KDE_INSTALL_FULL_APPDIR})
 
 if(NOT WIN32 AND NOT APPLE)
     # register marble app as handler
