Import Clipper2, the successor of the currently used Clipper library
Besides actually being maintained this includes interesting things for
us:
- a dedicated clip mode for rectangular areas which is said to be much
faster and more stable regarding preserving vertex ordering
- the option to attach custom data to vertices, which would allow the
removal of our current external maps for that
- direct support for floating point values, avoiding the currently used
conversions
- better performance in general

--- a/tools/vectorosm-tilecreator/CMakeLists.txt
+++ b/tools/vectorosm-tilecreator/CMakeLists.txt
@@ -20,6 +20,9 @@ include_directories(
 add_library(${TARGET} STATIC
 ../mbtile-import/MbTileWriter.cpp
 clipper/clipper.cpp
+clipper2/clipper.engine.cpp
+clipper2/clipper.offset.cpp
+clipper2/clipper.rectclip.cpp
 NodeReducer.cpp
 PeakAnalyzer.cpp
 SpellChecker.cpp
