Also build tools on the CI

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,6 +1,5 @@
 add_subdirectory( tilecreator )
 add_subdirectory( tilecreator-srtm2 )
-add_subdirectory( routing-instructions )
 add_subdirectory( dateline )
 add_subdirectory( asc2kml )
 add_subdirectory( constellations2kml )
@@ -16,11 +15,18 @@ add_subdirectory( pntreplace )
 add_subdirectory( shp2pn2 )
 add_subdirectory( svg2pnt )
 add_subdirectory( maptheme-previewimage )
-add_subdirectory( mapreproject )
+if (NOT WIN32)
+  # doesn't build on Windows currently
+  add_subdirectory( routing-instructions )
+  add_subdirectory( mapreproject )
+endif()
 add_subdirectory( speaker-files )
 add_subdirectory( stars )
 add_subdirectory( sentineltile )
-add_subdirectory( vectorosm-tilecreator )
+if (LINUX)
+  # Tirex backend contains highly Linux-specific code
+  add_subdirectory( vectorosm-tilecreator )
+endif()
 
 find_package(ZLIB)
 if(PROTOBUF_FOUND AND ZLIB_FOUND)
