--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -5,3 +5,6 @@ Dependencies:
 - 'on': ['@all']
   'require':
     'frameworks/extra-cmake-modules': '@stable'
+
+Options:
+ cmake-options: "-DBUILD_MARBLE_TOOLS=ON"
