Add CMake integration for the tile creator tests
Not pretty, but good enough to make this run on the CI
for Linux, which is the only relevant platform for the
maps.kde.org deployment of this.

--- a/tools/vectorosm-tilecreator/CMakeLists.txt
+++ b/tools/vectorosm-tilecreator/CMakeLists.txt
@@ -58,3 +58,7 @@ target_link_libraries(marble-vectorosm-tirex-backend vectorosm-toolchain)
 if (STATIC_BUILD)
     target_link_libraries(marble-vectorosm-tirex-backend OsmPlugin ShpPlugin)
 endif()
+
+if (BUILD_TESTING)
+    add_subdirectory(autotests)
+endif()
