Don't build code into all tile generation tools that's only needed by one

--- a/tools/vectorosm-tilecreator/CMakeLists.txt
+++ b/tools/vectorosm-tilecreator/CMakeLists.txt
@@ -1,6 +1,3 @@
-SET (TARGET vectorosm-toolchain)
-PROJECT (${TARGET})
-
 if (POLICY CMP0063)
     cmake_policy(SET CMP0063 NEW)
 endif()
@@ -17,14 +14,12 @@ include_directories(
 ../mbtile-import
 )
 
-add_library(${TARGET} STATIC
-../mbtile-import/MbTileWriter.cpp
+add_library(vectorosm-toolchain STATIC
 clipper2/clipper.engine.cpp
 clipper2/clipper.offset.cpp
 clipper2/clipper.rectclip.cpp
 NodeReducer.cpp
 PeakAnalyzer.cpp
-SpellChecker.cpp
 TagsFilter.cpp
 TileIterator.cpp
 TileDirectory.cpp
@@ -32,10 +27,14 @@ VectorClipper.cpp
 WayConcatenator.cpp
 WayChunk.cpp
 )
-target_link_libraries(${TARGET} marblewidget Qt5::Sql)
+target_link_libraries(vectorosm-toolchain marblewidget Qt5::Sql)
 
-add_executable(marble-vectorosm-tilecreator vectorosm-tilecreator.cpp)
-target_link_libraries(marble-vectorosm-tilecreator ${TARGET})
+add_executable(marble-vectorosm-tilecreator
+    ../mbtile-import/MbTileWriter.cpp
+    SpellChecker.cpp
+    vectorosm-tilecreator.cpp
+)
+target_link_libraries(marble-vectorosm-tilecreator vectorosm-toolchain)
 if (STATIC_BUILD)
     target_link_libraries(marble-vectorosm-tilecreator OsmPlugin ShpPlugin)
 endif()
