Use the "z" element of Clipper2 points instead of a separate node map
This is the faster and more robust way to retain node meta data during
clipping.

--- a/tools/vectorosm-tilecreator/CMakeLists.txt
+++ b/tools/vectorosm-tilecreator/CMakeLists.txt
@@ -27,6 +27,7 @@ VectorClipper.cpp
 WayConcatenator.cpp
 WayChunk.cpp
 )
+target_compile_definitions(vectorosm-toolchain PUBLIC USINGZ=1)
 target_link_libraries(vectorosm-toolchain marblewidget Qt5::Sql)
 
 add_executable(marble-vectorosm-tilecreator
