--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,12 @@
 # SPDX-License-Identifier: CC0-1.0
 
 include:
-  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/linux.yml
-  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/freebsd.yml
-  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/windows.yml
-  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/flatpak.yml
+  - project: sysadmin/ci-utilities
+    file:
+    - /gitlab-templates/linux.yml
+    - /gitlab-templates/freebsd.yml
+    - /gitlab-templates/windows.yml
+    - /gitlab-templates/flatpak.yml
 
 # Manual job for building of maps.kde.org binaries
 maps-kde-org-binaries:
