Don't install thumbnail desktop file

--- a/src/plugins/runner/gpx/CMakeLists.txt
+++ b/src/plugins/runner/gpx/CMakeLists.txt
@@ -66,10 +66,7 @@ endif()
 # install again once part is fixed to load and show the passed file
 # install(FILES marble_part_gpx.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
 
-# register thumbnail plugin as handler
-install(FILES marble_thumbnail_gpx.desktop DESTINATION ${KDE_INSTALL_FULL_APPDIR})
-
 if(NOT WIN32 AND NOT APPLE)
     # register marble app as handler
-    install(FILES marble_gpx.desktop DESTINATION ${KDE_INSTALL_FULL_APPDIR})
+    install(FILES marble_gpx.desktop DESTINATION ${KDE_INSTALL_APPDIR})
 endif()
