--- a/src/plugins/runner/json/CMakeLists.txt
+++ b/src/plugins/runner/json/CMakeLists.txt
@@ -27,11 +27,8 @@ endif()
 # install again once part is fixed to load and show the passed file
 # install(FILES marble_part_geojson.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
 
-# register thumbnail plugin as handler
-install(FILES marble_thumbnail_geojson.desktop DESTINATION ${KDE_INSTALL_FULL_APPDIR})
-
 if(NOT WIN32 AND NOT APPLE)
     # register marble app as handler
-    install(FILES marble_geojson.desktop DESTINATION ${KDE_INSTALL_FULL_APPDIR})
+    install(FILES marble_geojson.desktop DESTINATION ${KDE_INSTALL_APPDIR})
 endif()
 
