Enable documentation again

--- a/src/apps/marble-kde/CMakeLists.txt
+++ b/src/apps/marble-kde/CMakeLists.txt
@@ -79,5 +79,5 @@ macro_optional_find_package(KF6 ${REQUIRED_KF6_MIN_VERSION} QUIET COMPONENTS Doc
 
 if (KF6DocTools_FOUND)
     # Disabled for now
-    #kdoctools_install(${CMAKE_SOURCE_DIR}/po)
+    kdoctools_install(${CMAKE_SOURCE_DIR}/po)
 endif()
