--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -2,7 +2,7 @@
     "id": "org.kde.marble",
     "branch": "master",
     "runtime": "org.kde.Platform",
-    "runtime-version": "5.15-22.08",
+    "runtime-version": "6.7",
     "sdk": "org.kde.Sdk",
     "command": "marble",
     "rename-icon": "marble",
@@ -11,7 +11,7 @@
     "finish-args": [
         "--share=network",
         "--share=ipc",
-        "--socket=x11",
+        "--socket=fallback-x11",
         "--socket=wayland",
         "--device=dri"
     ],
