--- a/src/plugins/render/atmosphere/CMakeLists.txt
+++ b/src/plugins/render/atmosphere/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( atmosphere_SRCS AtmospherePlugin.cpp )
+set( atmosphere_SRCS AtmospherePlugin.cpp AtmospherePlugin.h)
 
 marble_add_plugin( AtmospherePlugin ${atmosphere_SRCS} )
