--- a/src/plugins/render/license/CMakeLists.txt
+++ b/src/plugins/render/license/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( license_SRCS License.cpp )
+set( license_SRCS License.cpp License.h)
 
 marble_add_plugin( License ${license_SRCS} )
