--- a/src/plugins/render/navigation/CMakeLists.txt
+++ b/src/plugins/render/navigation/CMakeLists.txt
@@ -5,7 +5,8 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( navigation_SRCS NavigationFloatItem.cpp ArrowDiscWidget.cpp NavigationButton.cpp NavigationSlider.cpp )
+set( navigation_SRCS NavigationFloatItem.cpp ArrowDiscWidget.cpp NavigationButton.cpp NavigationSlider.cpp
+NavigationFloatItem.h ArrowDiscWidget.h NavigationButton.h NavigationSlider.h)
 set (navigation_UI navigation.ui)
 
 qt_add_resources(navigation_SRCS navigation.qrc)
