--- a/src/plugins/render/progress/CMakeLists.txt
+++ b/src/plugins/render/progress/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( progress_SRCS ProgressFloatItem.cpp )
+set( progress_SRCS ProgressFloatItem.cpp ProgressFloatItem.h)
 
 marble_add_plugin( ProgressFloatItem ${progress_SRCS} )
