--- a/src/plugins/render/stars/CMakeLists.txt
+++ b/src/plugins/render/stars/CMakeLists.txt
@@ -6,7 +6,7 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( stars_SRCS StarsPlugin.cpp )
+set( stars_SRCS StarsPlugin.cpp StarsPlugin.h)
 set( stars_UI StarsConfigWidget.ui )
 
 qt_wrap_ui(stars_SRCS  ${stars_UI})
