--- a/src/plugins/render/sun/CMakeLists.txt
+++ b/src/plugins/render/sun/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( sun_SRCS SunPlugin.cpp )
+set( sun_SRCS SunPlugin.cpp SunPlugin.h)
 
 marble_add_plugin( SunPlugin ${sun_SRCS} )
