--- a/src/plugins/runner/geouri/CMakeLists.txt
+++ b/src/plugins/runner/geouri/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( geouri_SRCS GeoUriRunner.cpp GeoUriPlugin.cpp )
+set( geouri_SRCS GeoUriRunner.cpp GeoUriPlugin.cpp GeoUriRunner.h GeoUriPlugin.h )
 
 marble_add_plugin( GeoUriPlugin ${geouri_SRCS} )
