--- a/src/plugins/runner/gosmore-reversegeocoding/CMakeLists.txt
+++ b/src/plugins/runner/gosmore-reversegeocoding/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( gosmore_SRCS GosmoreReverseGeocodingRunner.cpp GosmoreReverseGeocodingPlugin.cpp )
+set( gosmore_SRCS GosmoreReverseGeocodingRunner.cpp GosmoreReverseGeocodingPlugin.cpp GosmoreReverseGeocodingRunner.h GosmoreReverseGeocodingPlugin.h)
 
 marble_add_plugin( GosmoreReverseGeocodingPlugin ${gosmore_SRCS} )
