--- a/src/plugins/runner/gosmore-routing/CMakeLists.txt
+++ b/src/plugins/runner/gosmore-routing/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( gosmore_SRCS GosmoreRoutingRunner.cpp GosmoreRoutingPlugin.cpp )
+set( gosmore_SRCS GosmoreRoutingRunner.cpp GosmoreRoutingPlugin.cpp GosmoreRoutingRunner.h GosmoreRoutingPlugin.h)
 
 marble_add_plugin( GosmoreRoutingPlugin ${gosmore_SRCS} )
