--- a/src/plugins/runner/gpsbabel/CMakeLists.txt
+++ b/src/plugins/runner/gpsbabel/CMakeLists.txt
@@ -5,7 +5,7 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( gpsbabel_SRCS GpsbabelPlugin.cpp GpsbabelRunner.cpp )
+set( gpsbabel_SRCS GpsbabelPlugin.cpp GpsbabelRunner.cpp GpsbabelPlugin.h GpsbabelRunner.h)
 
 marble_add_plugin( GpsbabelPlugin ${gpsbabel_SRCS} )
 
