--- a/src/plugins/runner/latlon/CMakeLists.txt
+++ b/src/plugins/runner/latlon/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( latlon_SRCS LatLonRunner.cpp LatLonPlugin.cpp )
+set( latlon_SRCS LatLonRunner.cpp LatLonPlugin.cpp LatLonRunner.h LatLonPlugin.h)
 
 marble_add_plugin( LatLonPlugin ${latlon_SRCS} )
