--- a/src/plugins/runner/local-osm-search/CMakeLists.txt
+++ b/src/plugins/runner/local-osm-search/CMakeLists.txt
@@ -11,6 +11,11 @@ LocalOsmSearchPlugin.cpp
 OsmPlacemark.cpp
 OsmDatabase.cpp
 DatabaseQuery.cpp
+LocalOsmSearchRunner.h
+LocalOsmSearchPlugin.h
+OsmPlacemark.h
+OsmDatabase.h
+DatabaseQuery.h
  )
 
 marble_add_plugin( LocalOsmSearchPlugin ${localOsmSearch_SRCS} )
