--- a/src/plugins/runner/localdatabase/CMakeLists.txt
+++ b/src/plugins/runner/localdatabase/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( localdatabase_SRCS LocalDatabaseRunner.cpp LocalDatabasePlugin.cpp )
+set( localdatabase_SRCS LocalDatabaseRunner.cpp LocalDatabasePlugin.cpp LocalDatabaseRunner.h LocalDatabasePlugin.h)
 
 marble_add_plugin( LocalDatabasePlugin ${localdatabase_SRCS} )
