--- a/src/plugins/runner/nominatim-reversegeocoding/CMakeLists.txt
+++ b/src/plugins/runner/nominatim-reversegeocoding/CMakeLists.txt
@@ -5,6 +5,8 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( nominatim_SRCS OsmNominatimReverseGeocodingRunner.cpp NominatimReverseGeocodingPlugin.cpp )
+set( nominatim_SRCS OsmNominatimReverseGeocodingRunner.cpp NominatimReverseGeocodingPlugin.cpp
+    OsmNominatimReverseGeocodingRunner.h NominatimReverseGeocodingPlugin.h
+)
 
 marble_add_plugin( NominatimReverseGeocodingPlugin ${nominatim_SRCS} )
