--- a/src/plugins/runner/nominatim-search/CMakeLists.txt
+++ b/src/plugins/runner/nominatim-search/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( nominatim_SRCS OsmNominatimSearchRunner.cpp NominatimSearchPlugin.cpp )
+set( nominatim_SRCS OsmNominatimSearchRunner.cpp NominatimSearchPlugin.cpp OsmNominatimSearchRunner.h NominatimSearchPlugin.h)
 
 marble_add_plugin( NominatimSearchPlugin ${nominatim_SRCS} )
