--- a/src/plugins/runner/open-source-routing-machine/CMakeLists.txt
+++ b/src/plugins/runner/open-source-routing-machine/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( osrm_SRCS OSRMRunner.cpp OSRMPlugin.cpp )
+set( osrm_SRCS OSRMRunner.cpp OSRMPlugin.cpp OSRMRunner.h OSRMPlugin.h)
 
 marble_add_plugin( OSRMPlugin ${osrm_SRCS} )
