--- a/src/plugins/runner/pnt/CMakeLists.txt
+++ b/src/plugins/runner/pnt/CMakeLists.txt
@@ -5,6 +5,6 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( pnt_SRCS PntPlugin.cpp PntRunner.cpp )
+set( pnt_SRCS PntPlugin.cpp PntRunner.cpp PntPlugin.h PntRunner.h)
 
 marble_add_plugin( PntPlugin ${pnt_SRCS} )
