--- a/src/thumbnailer/CMakeLists.txt
+++ b/src/thumbnailer/CMakeLists.txt
@@ -16,6 +16,7 @@ endif()
 
 set(marblethumbnail_SRCS
   thumbnailer.cpp
+  thumbnailer.h
   main.cpp
 )
 add_library(marblethumbnail MODULE ${marblethumbnail_SRCS})
