--- a/src/plugins/positionprovider/flightgear/CMakeLists.txt
+++ b/src/plugins/positionprovider/flightgear/CMakeLists.txt
@@ -5,7 +5,7 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( flightgear_SRCS FlightGearPositionProviderPlugin.cpp )
+set( flightgear_SRCS FlightGearPositionProviderPlugin.cpp FlightGearPositionProviderPlugin.h)
 set( FlightGearPositionProviderPlugin_LIBS )
 
 marble_add_plugin( FlightGearPositionProviderPlugin ${flightgear_SRCS} )
