--- a/src/plugins/positionprovider/qtpositioning/CMakeLists.txt
+++ b/src/plugins/positionprovider/qtpositioning/CMakeLists.txt
@@ -7,6 +7,7 @@ INCLUDE_DIRECTORIES(
 
 SET( qtpositioning_SRCS
  QtPositioningPositionProviderPlugin.cpp
+ QtPositioningPositionProviderPlugin.h
 )
 
 SET( QtPositioningPositionProviderPlugin_LIBS Qt6::Positioning )
