--- a/src/plugins/render/compass/CMakeLists.txt
+++ b/src/plugins/render/compass/CMakeLists.txt
@@ -5,7 +5,7 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( compass_SRCS CompassFloatItem.cpp )
+set( compass_SRCS CompassFloatItem.cpp CompassFloatItem.h)
 set( compass_UI CompassConfigWidget.ui )
 qt_wrap_ui( compass_SRCS ${compass_UI} )
 qt_add_resources( compass_SRCS compass.qrc )
