--- a/src/plugins/render/foursquare/CMakeLists.txt
+++ b/src/plugins/render/foursquare/CMakeLists.txt
@@ -9,6 +9,9 @@ set( my_SRCS
   FoursquarePlugin.cpp
   FoursquareModel.cpp
   FoursquareItem.cpp
+  FoursquarePlugin.h
+  FoursquareModel.h
+  FoursquareItem.h
  )
 
 marble_add_plugin( FoursquarePlugin ${my_SRCS} )
