--- a/src/plugins/render/mapscale/CMakeLists.txt
+++ b/src/plugins/render/mapscale/CMakeLists.txt
@@ -5,7 +5,7 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( mapscale_SRCS MapScaleFloatItem.cpp )
+set( mapscale_SRCS MapScaleFloatItem.cpp MapScaleFloatItem.h)
 set( mapscale_UI MapScaleConfigWidget.ui )
 
 qt_wrap_ui(mapscale_SRCS ${mapscale_UI})
