--- a/src/plugins/render/positionmarker/CMakeLists.txt
+++ b/src/plugins/render/positionmarker/CMakeLists.txt
@@ -5,7 +5,7 @@ INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-set( positionmarker_SRCS PositionMarker.cpp )
+set( positionmarker_SRCS PositionMarker.cpp PositionMarker.h)
 set( positionmarker_UI PositionMarkerConfigWidget.ui )
  
 qt_wrap_ui(positionmarker_SRCS ${positionmarker_UI})
